commit autocomplete finished

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -39,3 +39,6 @@ hgroup h2.lead { font: normal normal 1.125em "Roboto",Arial,Verdana,sans-serif; 
 .dataSetButton:hover{
     cursor: pointer;
 }
+.ui-autocomplete{
+    background-color: white;
+}
