--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -46,3 +46,7 @@ hgroup h2.lead { font: normal normal 1.125em "Roboto",Arial,Verdana,sans-serif; 
     border: 1px dotted black;
     padding: 8px;
 }
+
+.distribution{
+    list-style-type: none;
+}
